[tool.poetry]
name = "limity-fastapi-example"
version = "0.1.0"
description = "FastAPI example with Limity rate limiting"
authors = ["Limity"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = "^0.21.0"
limity = { path = "../../packages/python" }

[tool.poetry.dev-dependencies]
pytest = "^7.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
